2023/7/13:맵툴 첫 커빗

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			arr.map($=>{
 				$.map((_,i)=>{
 					r+=_
-					if($[i+1])r+=','
+					if($[i+1]!=undefined)r+=','
 				})
 				r+='\n'
 			})
